<resources>
    <string name="app_name" translatable="false">Forcar (DEV)</string>
    <string name="app_logo">Application logo</string>
    <string name="nav_home">Home</string>
    <string name="home_welcome">Welcome to %1$s, %2$s!</string>
    <string name="home_manage">Manage your cars, policies and expenses.</string>
    <string name="home_cars">Cars</string>
    <string name="home_policies">Policies</string>
    <string name="home_last_activity">Last activity</string>
    <string name="home_fuel_expenses_last">Last 3 refueling</string>
    <string name="home_fuel_expenses_last_n">Last %1$d refueling</string>
    <string name="home_fuel_expenses_last_1">Last 1 refueling</string>
    <string name="home_fuel_expenses_last_0">No refueling yet</string>
    <string name="home_service_expenses_last">Last 3 service expenses</string>
    <string name="home_service_expenses_last_n">Last %1$d service expenses</string>
    <string name="home_service_expenses_last_1">Last 1 service expense</string>
    <string name="home_service_expenses_last_0">No service visits yet</string>
    <string name="forgot_password_title">Forgotten password</string>
    <string name="forgot_password_email">Email</string>
    <string name="forgot_password_email_desc">After you enter your email, we will send you a reset password link on your email address.</string>
    <string name="forgot_password_send">Send reset password link</string>
    <string name="forgot_password_progress">Sending reset password link…</string>
    <string name="forgot_password_email_empty">Email must not be empty</string>
    <string name="forgot_password_success">Forgot password email sent successfully</string>
    <string name="forgot_password_error">Error sending forgot password email</string>
    <string name="reset_password_title">Set new password</string>
    <string name="reset_password_new_password">New password</string>
    <string name="reset_password_confirm_password">Confirm password</string>
    <string name="reset_password_save">Save new password</string>
    <string name="reset_password_new_password_error">New password must not be empty!</string>
    <string name="reset_password_confirm_password_error">Confirm password must not be empty!</string>
    <string name="reset_password_passwords_mismatch">The passwords do not match!</string>
    <string name="reset_password_success">User password reset successfully</string>
    <string name="reset_password_error">Error resetting password</string>
    <string name="login">Login</string>
    <string name="login_header">Log in to your account to manage your documents, cars and expenses.</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_registration">Don\'t have an account? Register</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="login_process">Logging in…</string>
    <string name="login_email_empty">Email must not be empty</string>
    <string name="login_password_empty">Password must not be empty</string>
    <string name="login_invalid_credentials">Invalid email/password!</string>
    <string name="login_welcome">Welcome, %1$s!</string>
    <string name="login_error">Error logging you in!</string>
    <string name="registration_title">Registration</string>
    <string name="registration_header">Register to create and manage your documents and car expenses.</string>
    <string name="registration_first_name">First name</string>
    <string name="registration_last_name">Last name</string>
    <string name="registration_email">Email</string>
    <string name="registration_password">Password</string>
    <string name="registration_password_confirm">Confirm password</string>
    <string name="registration_button">Register</string>
    <string name="registration_cancel">Cancel</string>
    <string name="registration_progress">Registration in progress…</string>
    <string name="registration_email_empty">Email must not be empty</string>
    <string name="registration_password_empty">Password must not be empty</string>
    <string name="registration_confirm_password_empty">Confirm password must not be empty</string>
    <string name="registration_passwords_match">Passwords must match</string>
    <string name="registration_first_name_empty">First name must not be empty</string>
    <string name="registration_last_name_empty">Last name must not be empty</string>
    <string name="registration_email_exists">This email is already registered</string>
    <string name="registration_success">Account created successfully</string>
    <string name="registration_error">Error creating account</string>
    <string name="logout_title">Logging out…</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="menu_home">Home</string>
    <string name="menu_cars">Cars</string>
    <string name="menu_policies">Policies</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_fuel_expense">Fuel</string>
    <string name="menu_service_expense">Service</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="car_icon">Car icon</string>
    <string name="cars_nofound">No cars found.</string>
    <string name="car_create_title">Create a car</string>
    <string name="car_create_button">Create a car</string>
    <string name="car_create_button_descr">Car create button</string>
    <string name="car_create_success">Car created successfully!</string>
    <string name="car_view_title">View a car</string>
    <string name="car_info">%1$s %2$s</string>
    <string name="car_year_label">Year</string>
    <string name="car_year">%1$d - Edition</string>
    <string name="car_brand">Brand</string>
    <string name="car_model">Model</string>
    <string name="car_color">Color</string>
    <string-array name="car_colors">
        <item>White</item>
        <item>Black</item>
        <item>Gray</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Brown</item>
        <item>Orange</item>
        <item>Lilac</item>
        <item>Pink</item>
        <item>Beige</item>
    </string-array>
    <string name="car_body_type">Car type</string>
    <string name="car_body_type_unspecified">Car type is not specified</string>
    <string name="car_body_type_0">Unspecified</string>
    <string name="car_body_type_1">Sedan</string>
    <string name="car_body_type_2">Coupe</string>
    <string name="car_body_type_3">Combi</string>
    <string name="car_body_type_4">Hatchback</string>
    <string name="car_body_type_5">SUV</string>
    <string name="car_body_type_6">Crossover</string>
    <string name="car_body_type_7">Minivan</string>
    <string name="car_body_type_8">Van</string>
    <string name="car_body_type_9">Pickup</string>
    <string name="car_body_type_10">Cabriolet</string>
    <string-array name="car_body_types">
        <item>Unspecified</item>
        <item>Sedan</item>
        <item>Coupe</item>
        <item>Combi</item>
        <item>Hatchback</item>
        <item>SUV</item>
        <item>Crossover</item>
        <item>Minivan</item>
        <item>Van</item>
        <item>Pickup</item>
        <item>Cabriolet</item>
    </string-array>
    <string name="car_license_plate">License plate</string>
    <string name="car_alias">Alias</string>
    <string name="car_alias_optional">Alias (optional)</string>
    <string name="car_added_on">Added on</string>
    <string name="car_edited_on">Edited on</string>
    <string name="car_transmission">Transmission</string>
    <string name="car_transmission_0">Manual</string>
    <string name="car_transmission_1">Automatic</string>
    <string-array name="car_transmissions">
        <item>Manual</item>
        <item>Automatic</item>
    </string-array>
    <string name="car_power_type_label">Power type/fuel</string>
    <string name="car_power_type_0">Diesel</string>
    <string name="car_power_type_1">Gasoline</string>
    <string name="car_power_type_2">LPG</string>
    <string name="car_power_type_3">Electric</string>
    <string-array name="car_power_types">
        <item>Diesel</item>
        <item>Gasoline</item>
        <item>LPG</item>
        <item>Electric</item>
    </string-array>
    <string name="car_update_title">Edit a car</string>
    <string name="car_update_button">Update a car</string>
    <string name="car_update_success">Car updated successfully!</string>
    <string name="car_delete_title">Delete car.</string>
    <string name="car_delete_message">Are you sure you want to delete this car? Note that all policies, associated with this car, will be automatically deleted!</string>
    <string name="car_delete_process">Deleting car…</string>
    <string name="car_delete_success">Car deleted successfully!</string>
    <string name="car_delete_error">Error deleting the car!</string>
    <string name="car_operation_invalid_format">Invalid format</string>
    <string name="car_operation_brand_empty">Brand must not be empty</string>
    <string name="car_operation_model_empty">Model must not be empty</string>
    <string name="car_operation_color_empty">Color must not be empty</string>
    <string name="car_operation_year_empty">Year must not be empty</string>
    <string name="car_operation_license_plate_empty">License plate must not be empty</string>
    <string name="car_get_error">Error getting car</string>
    <string name="car_not_found">Car not found</string>
    <string name="policy_icon">Policy icon</string>
    <string name="policies_nofound">No policies found.</string>
    <string name="policies_nocars">To create a policies you must create a car first.</string>
    <string name="policies_filter">Filter</string>
    <string name="policies_selected_type">Type - %1$s</string>
    <string name="policies_selected_status_0">Status - Active</string>
    <string name="policies_selected_status_1">Status - Expired</string>
    <string name="policies_selected_status_2">Status - Pending</string>
    <string name="policies_selected_car">Car - %1$s</string>
    <string name="policies_apply">Apply</string>
    <string name="policies_clear">Clear</string>
    <string name="policy_create_title">Create a policy</string>
    <string name="policy_create_button">Create policy</string>
    <string name="policy_create_type_prompt">Policy type</string>
    <string name="policy_create_car_prompt">Car</string>
    <string name="policy_create_success">Policy created successfully!</string>
    <string name="policy_create_error">Error creating policy!</string>
    <string name="policy_create_button_descr">Policy create button</string>
    <string name="policy_view_title">Policy information</string>
    <string name="policy_no">Policy No.</string>
    <string name="policy_number">Policy number</string>
    <string name="policy_ins_name">Provider name</string>
    <string name="policy_start_date">Start date</string>
    <string name="policy_end_date">End date</string>
    <string name="policy_type">Policy type</string>
    <string name="policy_type_1">Insurance</string>
    <string name="policy_type_2">Casco</string>
    <string name="policy_type_3">Vignette</string>
    <string name="policy_type_4">Yearly technical check</string>
    <string-array name="policy_types">
        <item>Insurance</item>
        <item>Casco</item>
        <item>Vignette</item>
        <item>Yearly technical check</item>
    </string-array>
    <string name="policy_status">Status</string>
    <string name="expenses_filter">Filter</string>
    <string name="expenses_car">Car</string>
    <string name="expenses_year">Year</string>
    <string name="expenses_apply">Apply</string>
</resources>