<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/fpImageIV"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fpEmailDescTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="@font/nunito"
            android:text="@string/forgot_password_email_desc"
            app:layout_constraintEnd_toEndOf="@+id/fpRightGuide"
            app:layout_constraintStart_toStartOf="@+id/fpLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/fpImageIV" />

        <TextView
            android:id="@+id/fpEmailLabelTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="@font/nunito"
            android:labelFor="@id/fpEmailET"
            android:text="@string/forgot_password_email"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/fpRightGuide"
            app:layout_constraintStart_toStartOf="@+id/fpLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/fpEmailDescTV" />

        <EditText
            android:id="@+id/fpEmailET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="email"
            android:fontFamily="@font/nunito"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/fpRightGuide"
            app:layout_constraintStart_toStartOf="@+id/fpLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/fpEmailLabelTV" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fpBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/forgot_password_send"
            android:textSize="12sp"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="@+id/fpRightGuide"
            app:layout_constraintStart_toStartOf="@+id/fpLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/fpEmailET" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fpLeftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fpRightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>